--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
-    "body-parser": "^1.20.2",
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "express": "^4.21.0",
+    "mongoose": "^8.7.0"
   }
 }
